Fix scrolling for billingPrompt on iOS

--- a/shell/client/_account.scss
+++ b/shell/client/_account.scss
@@ -764,6 +764,7 @@ body>.popup {
 body>.popup.billing-prompt>.frame {
   text-align: center;
   overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
 
   @media #{$desktop} {
     width: 932px;
